--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (2.1.0-3ubuntu1.1pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 25 Dec 2013 12:24:25 +0000
+
 policycoreutils (2.1.0-3ubuntu1.1) precise-proposed; urgency=low
 
   * Fix FTBFS in precise: (LP: #935368)
