Revert "No systemd"
This reverts commit 163aa645eea4ab0a6b2c2a7b467c02d625db57ce.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (2.3-1pexip2) pexip; urgency=low
+
+  * Reinstate dh_systemd
+
+ -- John-Mark Bell <jmb@pexip.com>  Mon, 23 Jul 2018 16:59:06 +0100
+
 policycoreutils (2.3-1pexip1) pexip; urgency=low
 
   * Migrate to Jessie
