--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (3.1-3pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:42 +0100
+
 policycoreutils (3.1-3) unstable; urgency=medium
 
   * Remove needless quotes around $FORCE variable in
