--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (3.1-3pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:35:01 +0100
+
 policycoreutils (3.1-3pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
