--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (3.4-1pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:19:41 +0000
+
 policycoreutils (3.4-1) unstable; urgency=medium
 
   [ Christian Göttsche ]
