--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (3.4-1pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:56:58 +0000
+
 policycoreutils (3.4-1pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
