New versioning scheme

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+policycoreutils (3.4-1+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:16:53 +0000
+
 policycoreutils (3.4-1pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
